--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     },
     "dependencies": {
         "@tabler/core": "1.0.0-beta17",
+        "autosize": "5.0.2",
         "axios": "^1.6.8",
         "bootstrap": "^5.3.3",
         "cropperjs": "^1.6.1",
